crates/mega-evm/tests/satin/snapshots/satin__withheld_gas__a_bounded_callee_writes_what_it_writes_without_the_read.snap
---
source: crates/mega-evm/tests/satin/withheld_gas.rs
expression: "&views"
---
{
  "gas limit 100000000, detained": {
    "result": {
      "kind": "success",
      "reason": "Stop",
      "output": "0x",
      "created": null,
      "logs": []
    },
    "gas": {
      "regular": 187581,
      "state": 0,
      "history": 27280,
      "history_bytes": 310,
      "reservoir_remaining": 0,
      "floor": 15000,
      "gas_used": 214861
    },
    "result_gas": {
      "total_gas_spent": 214861,
      "state_gas_spent": 0,
      "refunded": 0,
      "floor_gas": 15000,
      "reservoir_remaining": 0
    },
    "usage": {
      "data_size": 310,
      "write_records": 0
    },
    "limit_stop": null,
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000bef000": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x0000000000000000000000000000000000d00000": {
        "balance": "0x0",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x0000000000000000000000000000000000d00001": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0x84445dfd55c325c3e7b8b988dae1de52c77a64df6306dc51827f2cf4410fe292",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x4200000000000000000000000000000000000019": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x420000000000000000000000000000000000001a": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x420000000000000000000000000000000000001b": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      }
    }
  },
  "gas limit 100000000, plain": {
    "result": {
      "kind": "success",
      "reason": "Stop",
      "output": "0x",
      "created": null,
      "logs": []
    },
    "gas": {
      "regular": 187581,
      "state": 0,
      "history": 27280,
      "history_bytes": 310,
      "reservoir_remaining": 0,
      "floor": 15000,
      "gas_used": 214861
    },
    "result_gas": {
      "total_gas_spent": 214861,
      "state_gas_spent": 0,
      "refunded": 0,
      "floor_gas": 15000,
      "reservoir_remaining": 0
    },
    "usage": {
      "data_size": 310,
      "write_records": 0
    },
    "limit_stop": null,
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000bef000": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x0000000000000000000000000000000000d00000": {
        "balance": "0x0",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x0000000000000000000000000000000000d00001": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xe41d2448227b0a4aeb68aebcde6366373fc3bce87dd7b77765f4d4aba8942e6e",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x4200000000000000000000000000000000000019": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x420000000000000000000000000000000000001a": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x420000000000000000000000000000000000001b": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      }
    }
  },
  "gas limit 300000000, detained": {
    "result": {
      "kind": "success",
      "reason": "Stop",
      "output": "0x",
      "created": null,
      "logs": []
    },
    "gas": {
      "regular": 106041,
      "state": 391680,
      "history": 41360,
      "history_bytes": 470,
      "reservoir_remaining": 99566960,
      "floor": 15000,
      "gas_used": 539081
    },
    "result_gas": {
      "total_gas_spent": 539081,
      "state_gas_spent": 391680,
      "refunded": 0,
      "floor_gas": 15000,
      "reservoir_remaining": 99566960
    },
    "usage": {
      "data_size": 470,
      "write_records": 4
    },
    "limit_stop": null,
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000bef000": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x0000000000000000000000000000000000d00000": {
        "balance": "0x0",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x0000000000000000000000000000000000d00001": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0x84445dfd55c325c3e7b8b988dae1de52c77a64df6306dc51827f2cf4410fe292",
        "created": false,
        "selfdestructed": false,
        "storage": [
          {
            "slot": "0x0",
            "original": "0x0",
            "present": "0x1"
          }
        ]
      },
      "0x0000000000000000000000000000000000d00002": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xf593c0221423c9d0edf18b504a56c2c7f0d255eac750cadf7e74364644502921",
        "created": false,
        "selfdestructed": false,
        "storage": [
          {
            "slot": "0x1",
            "original": "0x0",
            "present": "0x1"
          },
          {
            "slot": "0x2",
            "original": "0x0",
            "present": "0x1"
          },
          {
            "slot": "0x3",
            "original": "0x0",
            "present": "0x1"
          }
        ]
      },
      "0x4200000000000000000000000000000000000019": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x420000000000000000000000000000000000001a": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x420000000000000000000000000000000000001b": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      }
    }
  },
  "gas limit 300000000, plain": {
    "result": {
      "kind": "success",
      "reason": "Stop",
      "output": "0x",
      "created": null,
      "logs": []
    },
    "gas": {
      "regular": 106041,
      "state": 391680,
      "history": 41360,
      "history_bytes": 470,
      "reservoir_remaining": 99566960,
      "floor": 15000,
      "gas_used": 539081
    },
    "result_gas": {
      "total_gas_spent": 539081,
      "state_gas_spent": 391680,
      "refunded": 0,
      "floor_gas": 15000,
      "reservoir_remaining": 99566960
    },
    "usage": {
      "data_size": 470,
      "write_records": 4
    },
    "limit_stop": null,
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000bef000": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x0000000000000000000000000000000000d00000": {
        "balance": "0x0",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x0000000000000000000000000000000000d00001": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xe41d2448227b0a4aeb68aebcde6366373fc3bce87dd7b77765f4d4aba8942e6e",
        "created": false,
        "selfdestructed": false,
        "storage": [
          {
            "slot": "0x0",
            "original": "0x0",
            "present": "0x1"
          }
        ]
      },
      "0x0000000000000000000000000000000000d00002": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xf593c0221423c9d0edf18b504a56c2c7f0d255eac750cadf7e74364644502921",
        "created": false,
        "selfdestructed": false,
        "storage": [
          {
            "slot": "0x1",
            "original": "0x0",
            "present": "0x1"
          },
          {
            "slot": "0x2",
            "original": "0x0",
            "present": "0x1"
          },
          {
            "slot": "0x3",
            "original": "0x0",
            "present": "0x1"
          }
        ]
      },
      "0x4200000000000000000000000000000000000019": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x420000000000000000000000000000000000001a": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x420000000000000000000000000000000000001b": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      }
    }
  }
}
