crates/mega-evm/tests/satin/snapshots/satin__withheld_gas__a_call_that_reads_the_beneficiary_costs_what_a_warm_account_costs.snap
---
source: crates/mega-evm/tests/satin/withheld_gas.rs
expression: summaries
---
{
  "gas 0, value 0, answered false, gas limit 100000000, a warm account": "success Stop; stop -; regular 17519 state 0 history 29040 history_bytes 330 reservoir_remaining 0 floor 16280 gas_used 46559; data_size 330 write_records 0; logs 0 accounts 7; view 0xc66f1d8cf798451c6d7dfbef376e336fab56e4344c26dbeaca21c26a334113d9",
  "gas 0, value 0, answered false, gas limit 100000000, the beneficiary": "success Stop; stop -; regular 17519 state 0 history 29040 history_bytes 330 reservoir_remaining 0 floor 16280 gas_used 46559; data_size 330 write_records 0; logs 0 accounts 6; view 0x49d55941a40799acda2c8e55678745dd1f15d7f10d619b5f3c027f594d200797",
  "gas 0, value 0, answered false, gas limit 300000000, a warm account": "success Stop; stop -; regular 17519 state 0 history 29040 history_bytes 330 reservoir_remaining 99970960 floor 16280 gas_used 46559; data_size 330 write_records 0; logs 0 accounts 7; view 0x7da5744036aa22f7f33ab57b9c48db9ed004f131f3d808f449c8c492b567343e",
  "gas 0, value 0, answered false, gas limit 300000000, the beneficiary": "success Stop; stop -; regular 17519 state 0 history 29040 history_bytes 330 reservoir_remaining 99970960 floor 16280 gas_used 46559; data_size 330 write_records 0; logs 0 accounts 6; view 0x7a1dc546bc45f831927e7c2cced54442206e146986e7f6db46f67226222a5ad8",
  "gas 0, value 0, answered true, gas limit 100000000, a warm account": "success Stop; stop -; regular 17519 state 0 history 29040 history_bytes 330 reservoir_remaining 0 floor 16280 gas_used 46559; data_size 330 write_records 0; logs 0 accounts 6; view 0x49d55941a40799acda2c8e55678745dd1f15d7f10d619b5f3c027f594d200797",
  "gas 0, value 0, answered true, gas limit 100000000, the beneficiary": "success Stop; stop -; regular 17519 state 0 history 29040 history_bytes 330 reservoir_remaining 0 floor 16280 gas_used 46559; data_size 330 write_records 0; logs 0 accounts 6; view 0x49d55941a40799acda2c8e55678745dd1f15d7f10d619b5f3c027f594d200797",
  "gas 0, value 0, answered true, gas limit 300000000, a warm account": "success Stop; stop -; regular 17519 state 0 history 29040 history_bytes 330 reservoir_remaining 99970960 floor 16280 gas_used 46559; data_size 330 write_records 0; logs 0 accounts 6; view 0x7a1dc546bc45f831927e7c2cced54442206e146986e7f6db46f67226222a5ad8",
  "gas 0, value 0, answered true, gas limit 300000000, the beneficiary": "success Stop; stop -; regular 17519 state 0 history 29040 history_bytes 330 reservoir_remaining 99970960 floor 16280 gas_used 46559; data_size 330 write_records 0; logs 0 accounts 6; view 0x7a1dc546bc45f831927e7c2cced54442206e146986e7f6db46f67226222a5ad8",
  "gas 0, value 1, answered false, gas limit 100000000, a warm account": "success Stop; stop -; regular 49219 state 183600 history 36080 history_bytes 410 reservoir_remaining 0 floor 16280 gas_used 268899; data_size 570 write_records 2; logs 1 accounts 7; view 0x8bb099c66fd18ddcbbdcc22ec0f225caaf232392b882244702b23d29b4551fe9",
  "gas 0, value 1, answered false, gas limit 100000000, the beneficiary": "success Stop; stop -; regular 49219 state 183600 history 36080 history_bytes 410 reservoir_remaining 0 floor 16280 gas_used 268899; data_size 570 write_records 2; logs 1 accounts 6; view 0xb523c3e5a408bd35011c77a26c91b7cff7901abb6dfab0d3ff9f09485966a180",
  "gas 0, value 1, answered false, gas limit 300000000, a warm account": "success Stop; stop -; regular 49219 state 183600 history 36080 history_bytes 410 reservoir_remaining 99780320 floor 16280 gas_used 268899; data_size 570 write_records 2; logs 1 accounts 7; view 0xcbbd4a082e5a0b355d6c4dda9ffe9eb22968b85d3d70be0a9ccfde6001824fd0",
  "gas 0, value 1, answered false, gas limit 300000000, the beneficiary": "success Stop; stop -; regular 49219 state 183600 history 36080 history_bytes 410 reservoir_remaining 99780320 floor 16280 gas_used 268899; data_size 570 write_records 2; logs 1 accounts 6; view 0xf1c19ba589529f08fac795c38c1abb49a219afdd0d8656bbc93d8d5392109d92",
  "gas 0, value 1, answered true, gas limit 100000000, a warm account": "success Stop; stop -; regular 49219 state 0 history 29040 history_bytes 330 reservoir_remaining 0 floor 16280 gas_used 78259; data_size 330 write_records 0; logs 0 accounts 6; view 0x1d520207f3ba7686cc7343a05675de18109b2539c32bfac4576d2e3d9491f1a7",
  "gas 0, value 1, answered true, gas limit 100000000, the beneficiary": "success Stop; stop -; regular 49219 state 0 history 29040 history_bytes 330 reservoir_remaining 0 floor 16280 gas_used 78259; data_size 330 write_records 0; logs 0 accounts 6; view 0x1d520207f3ba7686cc7343a05675de18109b2539c32bfac4576d2e3d9491f1a7",
  "gas 0, value 1, answered true, gas limit 300000000, a warm account": "success Stop; stop -; regular 49219 state 0 history 29040 history_bytes 330 reservoir_remaining 99970960 floor 16280 gas_used 78259; data_size 330 write_records 0; logs 0 accounts 6; view 0xe2c2392d7fdd4c2a902e8a42118859d40ceaa502f40e56a4484bca6ede2f6cb1",
  "gas 0, value 1, answered true, gas limit 300000000, the beneficiary": "success Stop; stop -; regular 49219 state 0 history 29040 history_bytes 330 reservoir_remaining 99970960 floor 16280 gas_used 78259; data_size 330 write_records 0; logs 0 accounts 6; view 0xe2c2392d7fdd4c2a902e8a42118859d40ceaa502f40e56a4484bca6ede2f6cb1",
  "gas 100000, value 0, answered false, gas limit 100000000, a warm account": "success Stop; stop -; regular 17519 state 0 history 29040 history_bytes 330 reservoir_remaining 0 floor 16280 gas_used 46559; data_size 330 write_records 0; logs 0 accounts 7; view 0xc66f1d8cf798451c6d7dfbef376e336fab56e4344c26dbeaca21c26a334113d9",
  "gas 100000, value 0, answered false, gas limit 100000000, the beneficiary": "success Stop; stop -; regular 17519 state 0 history 29040 history_bytes 330 reservoir_remaining 0 floor 16280 gas_used 46559; data_size 330 write_records 0; logs 0 accounts 6; view 0x49d55941a40799acda2c8e55678745dd1f15d7f10d619b5f3c027f594d200797",
  "gas 100000, value 0, answered false, gas limit 300000000, a warm account": "success Stop; stop -; regular 17519 state 0 history 29040 history_bytes 330 reservoir_remaining 99970960 floor 16280 gas_used 46559; data_size 330 write_records 0; logs 0 accounts 7; view 0x7da5744036aa22f7f33ab57b9c48db9ed004f131f3d808f449c8c492b567343e",
  "gas 100000, value 0, answered false, gas limit 300000000, the beneficiary": "success Stop; stop -; regular 17519 state 0 history 29040 history_bytes 330 reservoir_remaining 99970960 floor 16280 gas_used 46559; data_size 330 write_records 0; logs 0 accounts 6; view 0x7a1dc546bc45f831927e7c2cced54442206e146986e7f6db46f67226222a5ad8",
  "gas 100000, value 0, answered true, gas limit 100000000, a warm account": "success Stop; stop -; regular 17519 state 0 history 29040 history_bytes 330 reservoir_remaining 0 floor 16280 gas_used 46559; data_size 330 write_records 0; logs 0 accounts 6; view 0x49d55941a40799acda2c8e55678745dd1f15d7f10d619b5f3c027f594d200797",
  "gas 100000, value 0, answered true, gas limit 100000000, the beneficiary": "success Stop; stop -; regular 17519 state 0 history 29040 history_bytes 330 reservoir_remaining 0 floor 16280 gas_used 46559; data_size 330 write_records 0; logs 0 accounts 6; view 0x49d55941a40799acda2c8e55678745dd1f15d7f10d619b5f3c027f594d200797",
  "gas 100000, value 0, answered true, gas limit 300000000, a warm account": "success Stop; stop -; regular 17519 state 0 history 29040 history_bytes 330 reservoir_remaining 99970960 floor 16280 gas_used 46559; data_size 330 write_records 0; logs 0 accounts 6; view 0x7a1dc546bc45f831927e7c2cced54442206e146986e7f6db46f67226222a5ad8",
  "gas 100000, value 0, answered true, gas limit 300000000, the beneficiary": "success Stop; stop -; regular 17519 state 0 history 29040 history_bytes 330 reservoir_remaining 99970960 floor 16280 gas_used 46559; data_size 330 write_records 0; logs 0 accounts 6; view 0x7a1dc546bc45f831927e7c2cced54442206e146986e7f6db46f67226222a5ad8",
  "gas 100000, value 1, answered false, gas limit 100000000, a warm account": "success Stop; stop -; regular 49219 state 183600 history 36080 history_bytes 410 reservoir_remaining 0 floor 16280 gas_used 268899; data_size 570 write_records 2; logs 1 accounts 7; view 0x829c540701c77d06ab1ad2585e398f47270c2145f4ee21aadd768533339cac06",
  "gas 100000, value 1, answered false, gas limit 100000000, the beneficiary": "success Stop; stop -; regular 49219 state 183600 history 36080 history_bytes 410 reservoir_remaining 0 floor 16280 gas_used 268899; data_size 570 write_records 2; logs 1 accounts 6; view 0x82894354531e33d53372b5b97bbf6b7935731183d65a5324e41464813b650054",
  "gas 100000, value 1, answered false, gas limit 300000000, a warm account": "success Stop; stop -; regular 49219 state 183600 history 36080 history_bytes 410 reservoir_remaining 99780320 floor 16280 gas_used 268899; data_size 570 write_records 2; logs 1 accounts 7; view 0x2b29d6f2403f001cb8d1cf5af1c7e3a70db9cfab204bcb556761a35de88da4e2",
  "gas 100000, value 1, answered false, gas limit 300000000, the beneficiary": "success Stop; stop -; regular 49219 state 183600 history 36080 history_bytes 410 reservoir_remaining 99780320 floor 16280 gas_used 268899; data_size 570 write_records 2; logs 1 accounts 6; view 0xba639fd8823f235c3cb178e31aa581df71617dd8581067124ad7f69025e89a96",
  "gas 100000, value 1, answered true, gas limit 100000000, a warm account": "success Stop; stop -; regular 49219 state 0 history 29040 history_bytes 330 reservoir_remaining 0 floor 16280 gas_used 78259; data_size 330 write_records 0; logs 0 accounts 6; view 0x1d520207f3ba7686cc7343a05675de18109b2539c32bfac4576d2e3d9491f1a7",
  "gas 100000, value 1, answered true, gas limit 100000000, the beneficiary": "success Stop; stop -; regular 49219 state 0 history 29040 history_bytes 330 reservoir_remaining 0 floor 16280 gas_used 78259; data_size 330 write_records 0; logs 0 accounts 6; view 0x1d520207f3ba7686cc7343a05675de18109b2539c32bfac4576d2e3d9491f1a7",
  "gas 100000, value 1, answered true, gas limit 300000000, a warm account": "success Stop; stop -; regular 49219 state 0 history 29040 history_bytes 330 reservoir_remaining 99970960 floor 16280 gas_used 78259; data_size 330 write_records 0; logs 0 accounts 6; view 0xe2c2392d7fdd4c2a902e8a42118859d40ceaa502f40e56a4484bca6ede2f6cb1",
  "gas 100000, value 1, answered true, gas limit 300000000, the beneficiary": "success Stop; stop -; regular 49219 state 0 history 29040 history_bytes 330 reservoir_remaining 99970960 floor 16280 gas_used 78259; data_size 330 write_records 0; logs 0 accounts 6; view 0xe2c2392d7fdd4c2a902e8a42118859d40ceaa502f40e56a4484bca6ede2f6cb1"
}
