crates/mega-evm/tests/satin/snapshots/satin__withheld_gas__a_callee_within_the_cap_bills_the_same_as_without_the_read.snap
---
source: crates/mega-evm/tests/satin/withheld_gas.rs
expression: "&summaries(&views)"
---
{
  "a creation, gas limit 100000000, detained": "success Stop; stop -; regular 69143 state 330480 history 40656 history_bytes 462 reservoir_remaining 0 floor 15000 gas_used 440279; data_size 462 write_records 3; logs 0 accounts 7",
  "a creation, gas limit 100000000, plain": "success Stop; stop -; regular 69143 state 330480 history 40656 history_bytes 462 reservoir_remaining 0 floor 15000 gas_used 440279; data_size 462 write_records 3; logs 0 accounts 7",
  "a creation, gas limit 300000000, detained": "success Stop; stop -; regular 69143 state 330480 history 40656 history_bytes 462 reservoir_remaining 99628864 floor 15000 gas_used 440279; data_size 462 write_records 3; logs 0 accounts 7",
  "a creation, gas limit 300000000, plain": "success Stop; stop -; regular 69143 state 330480 history 40656 history_bytes 462 reservoir_remaining 99628864 floor 15000 gas_used 440279; data_size 462 write_records 3; logs 0 accounts 7",
  "a fresh slot on 150,000, gas limit 100000000, detained": "success Stop; stop -; regular 61829 state 195840 history 34320 history_bytes 390 reservoir_remaining 0 floor 15000 gas_used 291989; data_size 390 write_records 2; logs 0 accounts 7",
  "a fresh slot on 150,000, gas limit 100000000, plain": "success Stop; stop -; regular 61829 state 195840 history 34320 history_bytes 390 reservoir_remaining 0 floor 15000 gas_used 291989; data_size 390 write_records 2; logs 0 accounts 7",
  "a fresh slot on 150,000, gas limit 300000000, detained": "success Stop; stop -; regular 61829 state 195840 history 34320 history_bytes 390 reservoir_remaining 99769840 floor 15000 gas_used 291989; data_size 390 write_records 2; logs 0 accounts 7",
  "a fresh slot on 150,000, gas limit 300000000, plain": "success Stop; stop -; regular 61829 state 195840 history 34320 history_bytes 390 reservoir_remaining 99769840 floor 15000 gas_used 291989; data_size 390 write_records 2; logs 0 accounts 7",
  "a value call running on its stipend, with a log, gas limit 100000000, detained": "success Stop; stop -; regular 46802 state 97920 history 37840 history_bytes 462 reservoir_remaining 0 floor 15000 gas_used 182562; data_size 622 write_records 3; logs 2 accounts 7",
  "a value call running on its stipend, with a log, gas limit 100000000, plain": "success Stop; stop -; regular 46802 state 97920 history 37840 history_bytes 462 reservoir_remaining 0 floor 15000 gas_used 182562; data_size 622 write_records 3; logs 2 accounts 7",
  "a value call running on its stipend, with a log, gas limit 300000000, detained": "success Stop; stop -; regular 46802 state 97920 history 37840 history_bytes 462 reservoir_remaining 99864240 floor 15000 gas_used 182562; data_size 622 write_records 3; logs 2 accounts 7",
  "a value call running on its stipend, with a log, gas limit 300000000, plain": "success Stop; stop -; regular 46802 state 97920 history 37840 history_bytes 462 reservoir_remaining 99864240 floor 15000 gas_used 182562; data_size 622 write_records 3; logs 2 accounts 7",
  "an inspector's answer, gas limit 100000000, detained": "success Stop; stop -; regular 39723 state 97920 history 30800 history_bytes 350 reservoir_remaining 0 floor 15000 gas_used 168443; data_size 350 write_records 1; logs 0 accounts 6",
  "an inspector's answer, gas limit 100000000, plain": "success Stop; stop -; regular 39723 state 97920 history 30800 history_bytes 350 reservoir_remaining 0 floor 15000 gas_used 168443; data_size 350 write_records 1; logs 0 accounts 6",
  "an inspector's answer, gas limit 300000000, detained": "success Stop; stop -; regular 39723 state 97920 history 30800 history_bytes 350 reservoir_remaining 99871280 floor 15000 gas_used 168443; data_size 350 write_records 1; logs 0 accounts 6",
  "an inspector's answer, gas limit 300000000, plain": "success Stop; stop -; regular 39723 state 97920 history 30800 history_bytes 350 reservoir_remaining 99871280 floor 15000 gas_used 168443; data_size 350 write_records 1; logs 0 accounts 6",
  "halt on a little gas, gas limit 100000000, detained": "success Stop; stop -; regular 219823 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 247103; data_size 310 write_records 0; logs 0 accounts 6",
  "halt on a little gas, gas limit 100000000, plain": "success Stop; stop -; regular 219823 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 247103; data_size 310 write_records 0; logs 0 accounts 6",
  "halt on a little gas, gas limit 300000000, detained": "success Stop; stop -; regular 219823 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 247103; data_size 310 write_records 0; logs 0 accounts 6",
  "halt on a little gas, gas limit 300000000, plain": "success Stop; stop -; regular 219823 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 247103; data_size 310 write_records 0; logs 0 accounts 6",
  "halt, gas limit 100000000, detained": "success Stop; stop -; regular 98413125 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 98440405; data_size 310 write_records 0; logs 0 accounts 6",
  "halt, gas limit 100000000, plain": "success Stop; stop -; regular 98413125 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 98440405; data_size 310 write_records 0; logs 0 accounts 6",
  "halt, gas limit 300000000, detained": "success Stop; stop -; regular 196877479 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 196904759; data_size 310 write_records 0; logs 0 accounts 6",
  "halt, gas limit 300000000, plain": "success Stop; stop -; regular 196877479 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 196904759; data_size 310 write_records 0; logs 0 accounts 6",
  "revert, gas limit 100000000, detained": "success Stop; stop -; regular 180351 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 207631; data_size 310 write_records 0; logs 0 accounts 6",
  "revert, gas limit 100000000, plain": "success Stop; stop -; regular 180351 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 207631; data_size 310 write_records 0; logs 0 accounts 6",
  "revert, gas limit 300000000, detained": "success Stop; stop -; regular 180351 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 207631; data_size 310 write_records 0; logs 0 accounts 6",
  "revert, gas limit 300000000, plain": "success Stop; stop -; regular 180351 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 207631; data_size 310 write_records 0; logs 0 accounts 6",
  "success on a little gas, gas limit 100000000, detained": "success Stop; stop -; regular 200248 state 97920 history 30800 history_bytes 350 reservoir_remaining 0 floor 15000 gas_used 328968; data_size 350 write_records 1; logs 0 accounts 7",
  "success on a little gas, gas limit 100000000, plain": "success Stop; stop -; regular 200248 state 97920 history 30800 history_bytes 350 reservoir_remaining 0 floor 15000 gas_used 328968; data_size 350 write_records 1; logs 0 accounts 7",
  "success on a little gas, gas limit 300000000, detained": "success Stop; stop -; regular 200248 state 97920 history 30800 history_bytes 350 reservoir_remaining 99871280 floor 15000 gas_used 328968; data_size 350 write_records 1; logs 0 accounts 7",
  "success on a little gas, gas limit 300000000, plain": "success Stop; stop -; regular 200248 state 97920 history 30800 history_bytes 350 reservoir_remaining 99871280 floor 15000 gas_used 328968; data_size 350 write_records 1; logs 0 accounts 7",
  "success, gas limit 100000000, detained": "success Stop; stop -; regular 200247 state 97920 history 30800 history_bytes 350 reservoir_remaining 0 floor 15000 gas_used 328967; data_size 350 write_records 1; logs 0 accounts 7",
  "success, gas limit 100000000, plain": "success Stop; stop -; regular 200247 state 97920 history 30800 history_bytes 350 reservoir_remaining 0 floor 15000 gas_used 328967; data_size 350 write_records 1; logs 0 accounts 7",
  "success, gas limit 300000000, detained": "success Stop; stop -; regular 200247 state 97920 history 30800 history_bytes 350 reservoir_remaining 99871280 floor 15000 gas_used 328967; data_size 350 write_records 1; logs 0 accounts 7",
  "success, gas limit 300000000, plain": "success Stop; stop -; regular 200247 state 97920 history 30800 history_bytes 350 reservoir_remaining 99871280 floor 15000 gas_used 328967; data_size 350 write_records 1; logs 0 accounts 7",
  "the depth guard, gas limit 100000000, detained": "success Stop; stop -; regular 109247 state 97920 history 30800 history_bytes 350 reservoir_remaining 0 floor 15000 gas_used 237967; data_size 350 write_records 1; logs 0 accounts 7",
  "the depth guard, gas limit 100000000, plain": "success Stop; stop -; regular 109247 state 97920 history 30800 history_bytes 350 reservoir_remaining 0 floor 15000 gas_used 237967; data_size 350 write_records 1; logs 0 accounts 7",
  "the depth guard, gas limit 300000000, detained": "success Stop; stop -; regular 114313 state 97920 history 30800 history_bytes 350 reservoir_remaining 99871280 floor 15000 gas_used 243033; data_size 350 write_records 1; logs 0 accounts 7",
  "the depth guard, gas limit 300000000, plain": "success Stop; stop -; regular 114313 state 97920 history 30800 history_bytes 350 reservoir_remaining 99871280 floor 15000 gas_used 243033; data_size 350 write_records 1; logs 0 accounts 7"
}
